@@ -8,8 +8,6 @@ import org.cambium.common.exception.ServiceException;
 import org.cambium.common.kit.Kit;
 import org.cambium.common.util.ChangesHelper;
 import org.cambium.common.util.ChangesHelperMulti;
-import org.cambium.common.util.MapUtils;
-import org.cambium.featurer.FeaturerService;
 import org.cambium.service.EntitySecureFindServiceImpl;
 import org.cambium.service.EntitySmartService;
 import org.springframework.context.annotation.Lazy;
@@ -18,12 +16,12 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.twins.core.dao.projection.ProjectionEntity;
 import org.twins.core.dao.projection.ProjectionRepository;
-import org.twins.core.domain.ApiUser;
 import org.twins.core.domain.projection.ProjectionCreate;
 import org.twins.core.domain.projection.ProjectionUpdate;
 import org.twins.core.featurer.fieldtyper.FieldTyper;
-import org.twins.core.service.auth.AuthService;
 import org.twins.core.service.twin.TwinPointerService;
+import org.twins.core.service.twinclass.TwinClassFieldService;
+import org.twins.core.service.twinclass.TwinClassService;
 
 import java.util.*;
 import java.util.function.Function;
@@ -37,8 +35,12 @@ import java.util.stream.StreamSupport;
 public class ProjectionService extends EntitySecureFindServiceImpl<ProjectionEntity> {
     private final ProjectionRepository projectionRepository;
     private final TwinPointerService twinPointerService;
-    private final FeaturerService featurerService;
-    private final AuthService authService;
+    @Lazy
+    private final TwinClassFieldService twinClassFieldService;
+    @Lazy
+    private final TwinClassService twinClassService;
+    @Lazy
+    private final ProjectionTypeService projectionTypeService;
 
     @Override
     public CrudRepository<ProjectionEntity, UUID> entityRepository() {
@@ -52,6 +54,7 @@ public class ProjectionService extends EntitySecureFindServiceImpl<ProjectionEnt
 
     @Override
     public boolean isEntityReadDenied(ProjectionEntity entity, EntitySmartService.ReadPermissionCheckMode readPermissionCheckMode) throws ServiceException {
+        loadProjectionType(entity);
         return checkDomainAccessDenied(entity.getProjectionType().getDomainId(), entity.logShort(), readPermissionCheckMode);
     }
 
@@ -70,9 +73,7 @@ public class ProjectionService extends EntitySecureFindServiceImpl<ProjectionEnt
 
         switch (entityValidateMode) {
             case beforeSave:
-                if (entity.getSrcTwinPointer() == null || !entity.getSrcTwinPointer().getId().equals(entity.getSrcTwinPointerId())) {
-                    entity.setSrcTwinPointer(twinPointerService.findEntitySafe(entity.getSrcTwinPointerId()));
-                }
+                loadSrcTwinPointer(entity);
         }
         return true;
     }
@@ -138,38 +139,70 @@ public class ProjectionService extends EntitySecureFindServiceImpl<ProjectionEnt
     }
 
     public void updateFieldProjectorFeaturerId(ProjectionEntity dbProjectionEntity, Integer newFeaturerId, HashMap<String, String> newFeaturerParams, ChangesHelper changesHelper) throws ServiceException {
-        if (newFeaturerId == null || newFeaturerId == 0) {
-            if (MapUtils.isEmpty(newFeaturerParams))
-                return; //nothing was changed
-            else
-                newFeaturerId = dbProjectionEntity.getFieldProjectorFeaturerId(); // only params where changed
-        }
-        if (changesHelper.isChanged(ProjectionEntity.Fields.fieldProjectorFeaturerId, dbProjectionEntity.getFieldProjectorFeaturerId(), newFeaturerId)) {
-            featurerService.checkValid(newFeaturerId, newFeaturerParams, FieldTyper.class);
-            dbProjectionEntity
-                    .setFieldProjectorFeaturerId(newFeaturerId);
-        }
-        featurerService.prepareForStore(newFeaturerId, newFeaturerParams);
-        if (!MapUtils.areEqual(dbProjectionEntity.getFieldProjectorParams(), newFeaturerParams)) {
-            changesHelper.add(ProjectionEntity.Fields.fieldProjectorParams, dbProjectionEntity.getFieldProjectorParams(), newFeaturerParams);
-            dbProjectionEntity
-                    .setFieldProjectorFeaturerId(newFeaturerId);
-        }
+        updateEntityFeaturerField(dbProjectionEntity, newFeaturerId, newFeaturerParams,
+                ProjectionEntity::getFieldProjectorFeaturerId, ProjectionEntity::setFieldProjectorFeaturerId,
+                ProjectionEntity::getFieldProjectorParams, ProjectionEntity::setFieldProjectorParams,
+                ProjectionEntity.Fields.fieldProjectorFeaturerId, ProjectionEntity.Fields.fieldProjectorParams,
+                FieldTyper.class, changesHelper);
     }
 
     public void deleteProjections(Set<UUID> projectionIds) throws ServiceException {
         deleteSafe(projectionIds);
     }
 
-    public void loadProjectorFeaturer(ProjectionEntity entity) {
-        loadProjectorFeaturer(List.of(entity));
+    public void loadSrcTwinPointer(ProjectionEntity src) throws ServiceException {
+        loadSrcTwinPointer(Collections.singletonList(src));
     }
 
-    public void loadProjectorFeaturer(Collection<ProjectionEntity> entities) {
-        featurerService.loadFeaturers(entities,
-                ProjectionEntity::getId,
-                ProjectionEntity::getFieldProjectorFeaturerId,
-                ProjectionEntity::getFieldProjectorFeaturer,
-                ProjectionEntity::setFieldProjectorFeaturer);
+    public void loadSrcTwinPointer(Collection<ProjectionEntity> srcCollection) throws ServiceException {
+        twinPointerService.load(srcCollection,
+                ProjectionEntity::getSrcTwinPointerId,
+                ProjectionEntity::getSrcTwinPointer,
+                ProjectionEntity::setSrcTwinPointer);
     }
+
+    public void loadSrcTwinClassField(ProjectionEntity src) throws ServiceException {
+        loadSrcTwinClassField(Collections.singletonList(src));
+    }
+
+    public void loadSrcTwinClassField(Collection<ProjectionEntity> srcCollection) throws ServiceException {
+        twinClassFieldService.load(srcCollection,
+                ProjectionEntity::getSrcTwinClassFieldId,
+                ProjectionEntity::getSrcTwinClassField,
+                ProjectionEntity::setSrcTwinClassField);
+    }
+
+    public void loadDstTwinClassField(ProjectionEntity src) throws ServiceException {
+        loadDstTwinClassField(Collections.singletonList(src));
+    }
+
+    public void loadDstTwinClassField(Collection<ProjectionEntity> srcCollection) throws ServiceException {
+        twinClassFieldService.load(srcCollection,
+                ProjectionEntity::getDstTwinClassFieldId,
+                ProjectionEntity::getDstTwinClassField,
+                ProjectionEntity::setDstTwinClassField);
+    }
+
+    public void loadDstTwinClass(ProjectionEntity src) throws ServiceException {
+        loadDstTwinClass(Collections.singletonList(src));
+    }
+
+    public void loadDstTwinClass(Collection<ProjectionEntity> srcCollection) throws ServiceException {
+        twinClassService.load(srcCollection,
+                ProjectionEntity::getDstTwinClassId,
+                ProjectionEntity::getDstTwinClass,
+                ProjectionEntity::setDstTwinClass);
+    }
+
+    public void loadProjectionType(ProjectionEntity src) throws ServiceException {
+        loadProjectionType(Collections.singletonList(src));
+    }
+
+    public void loadProjectionType(Collection<ProjectionEntity> srcCollection) throws ServiceException {
+        projectionTypeService.load(srcCollection,
+                ProjectionEntity::getProjectionTypeId,
+                ProjectionEntity::getProjectionType,
+                ProjectionEntity::setProjectionType);
+    }
+
 }
